# personalized-news-mailer

./: .gitignore  README.md  d1_schema.sql  drizzle.config.ts  extract_articles.py  knip.json  package-lock.json  package.json  tsconfig.json  vite.config.ts  wrangler.jsonc
.github/: dependabot.yml
.github/workflows/: ai-review-and-autoapprove.yml  auto-label.yml  auto-merge.yml  auto-pr-and-merge.yml  batch-merge.yml  codeql.yml  debug-preview.yml  dependabot-auto-approve.yml  dependabot-auto-merge.yml  dependency-review.yml  deploy.yml  pr-safe-chain.yml  preview-build.yml  preview-deploy.yml  safe-chain-retry.yml  (+2 more)
app/: global.d.ts  server.ts
linalg-wasm/: Cargo.toml  LICENSE  README.md
linalg-wasm/src/: lib.rs
migrations/: 0001_initial_schema.sql  0002_add_education_logs_composite_index.sql  0002_add_processed_column.sql  0003_add_mmr_lambda_to_users.sql  0004_extend_embedding_dimension.sql  0005_add_content_hash_without_unique.sql  0005_add_published_at_to_sent_articles.sql  0006_add_unique_constraint_to_content_hash.sql
public/: education.css  education.html  education.js  index.html  personalized-education.html  personalized-education.js  privacy.html  script.js  selected-articles.html  selected-articles.js  style.css
scripts/: dry-run-algo.ts
src/: articleSelector.ts  batchQueueDO.ts  brevoClient.ts  categoryClassifier.ts  clickLogger.ts  config.ts  emailGenerator.ts  emailGenerator.tsx  geminiClient.ts  gmailClient.ts  index.ts  keywordManager.ts  logger.ts  newsCollector.ts  openaiClient.ts  sendgridClient.ts  userProfile.ts  wasmDO.ts
(+34 files in other folders)
