[package]
name = "linalg-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
ndarray = "0.17"
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = { version = "0.3", features = ["console"] }
